1999-05-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -getRetVal:buf:]): For builtin_apply workaround
	support, handle char, short, and long.  char and short are special
	cases for Sparc, since they are aligned at the top, not the bottom
	of a word.

1999-05-09  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* FCall.[hm], defobj.h ([FCall_c -getRetVal:buf:]): Replaces 
	getRetVal:.

	* DefObject.m ([Object_s -forward::]): Use it, pre-allocating
	retVal with alloca.

1999-05-08  Marcus Daniels  <marcusd@asl.krasnow.gmu.edu>

	* FCall.m (APPLY): New macro. Use it in all apply_* functions.
	This macro uses a fixed size of 16 for the __builtin_apply stack
	size argument -- necessary for unknown reasons on Irix6.5.

1999-05-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -performCall]): Add casts for jobject and jstring
	return assignment.

1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m ([HDF5_c -checkDatasetName:]): New method.

	* HDF5Object.[hm], defobj.h: 

	* internal.m (map_ivars): Ignore pointers.

	* HDF5Object.m (create_class_from_compound_type): Remove
	checks for ivar vs. HDF5 type size and count consistency -- we're
	automatically ignoring pointers.  Use find_ivar instead of
	positional access to ivar_list.
	([HDF5_c -createEnd]): Move initialization of point space to the end.
	Handle Dataset as well as Group opens.  Don't raise events
	when opens fail, return nil.

	* HDF5Object.[hm], defobj.h ([HDF5_c -assignIvar:]): New method.
	([HDF5_c -setName:]): Move to setting phase.

	* DefObject.m ([Object_s -lispOutVars:deep:]): Remove check
	for _C_PTR, this is now avoided by map_ivars.

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.[mh], defobj.h ([HDF5_c -getDatasetRank], [HDF5_c
	-getDatasetDimension:]): New methods.

	* DefObject.[hm], defobj.h ([Object_s -lispOutVars:deep:]):
	New method.

	* DefObject.m ([Object_s -_lispOut_:deep:]): Use it.
