@@ -421,6 +421,14 @@ lisp_output_type (const char *type,
       sprintf (buf, "%lu", ((unsigned long *) ptr)[offset]);
       [stream catC: buf];
       break;
+    case _C_LNG_LNG:
+      sprintf (buf, "%lld", ((long long *) ptr)[offset]);
+      [stream catC: buf];
+      break;
+    case _C_ULNG_LNG:
+      sprintf (buf, "%llu", ((unsigned long long *) ptr)[offset]);
+      [stream catC: buf];
+      break;
     case _C_FLT:
       sprintf (buf, "%fF0", ((float *) ptr)[offset]);
       [stream catC: buf];
@@ -471,6 +479,7 @@ lisp_output_type (const char *type,
       abort ();
       break;
     }
+  printf ("done: `%c'", *type);
 }
 
 #if ((__GNUC__ == 2) && (__GNUC_MINOR__ == 8)) && (__GNUC__ > 2)
